--- a/gdc-ci.yaml
+++ b/gdc-ci.yaml
@@ -1,3 +1,3 @@
 pull-request:
-  - yarn tslint-ci
+  - yarn validate-ci
   - JEST_SUITE_NAME="DataLayer Unit Tests" JEST_JUNIT_OUTPUT="./ci/results/test-results.xml" jest --config=jest.ci.json
