--- a/gdc-ci.yaml
+++ b/gdc-ci.yaml
@@ -1,3 +1,4 @@
+# defaults - https://github.com/gooddata/gdc-ci/blob/develop/components/client/gdc-ci.yaml
 pull-request:
   - yarn validate-ci
   - JEST_SUITE_NAME="DataLayer Unit Tests" JEST_JUNIT_OUTPUT="./ci/results/test-results.xml" jest --config=jest.ci.json
