--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
     "lodash": "4.17.4"
   },
   "devDependencies": {
+    "@types/express": "4.0.37",
+    "@types/invariant": "2.2.29",
     "@types/jest": "18.1.1",
+    "@types/json-stable-stringify": "1.0.32",
     "@types/lodash": "4.14.61",
     "@types/node": "7.0.8",
     "jest": "21.0.0",
     "jest-junit": "3.0.0",
     "ts-jest": "21.0.0",
-    "tslint": "5.4.3",
-    "tslint-config-gooddata": "0.0.2",
+    "tslint-config-gooddata": "0.0.4",
     "typescript": "2.4.2"
   },
   "scripts": {
     "test": "jest --watch",
-    "dev": "rm -rf dist && tsc -d --outDir dist --watch",
-    "prepublish": "rm -rf dist && tsc -d --outDir dist",
-    "tslint": "tslint --format verbose --config tslint.json index.ts src/**/*.ts",
-    "tslint-ci": "mkdir -p ./ci/results && tslint --config tslint.json --format checkstyle --out ./ci/results/tslint-results.xml index.ts src/**/*.ts",
+    "dev": "rm -rf dist && tsc --watch",
+    "prepublish": "rm -rf dist && tsc",
+    "tslint": "./node_modules/tslint/bin/tslint --type-check --project tsconfig.base.json --format verbose './src/**/*.ts'",
+    "tslint-ci": "mkdir -p ./ci/results && ./node_modules/tslint/bin/tslint --type-check --project tsconfig.base.json --format checkstyle --out ./ci/results/tslint-results.xml './src/**/*.ts'",
     "validate": "tsc -p tsconfig.base.json --noEmit && yarn tslint",
     "validate-ci": "tsc -p tsconfig.base.json --noEmit && yarn tslint-ci"
   },
