--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,10 +1,20 @@
 {
-    "compilerOptions": {
-        "moduleResolution": "node",
-        "module": "commonjs",
-        "jsx": "react",
-        "lib": ["es6", "dom"],
-        "noUnusedLocals": true,
-        "rootDir": "src"
-    }
+  "compilerOptions": {
+    "declaration": true,
+    "lib": [
+      "es6",
+      "dom"
+    ],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "outDir": "dist",
+    "sourceMap": true,
+    "suppressImplicitAnyIndexErrors": true
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
