--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "typings": "dist/index.d.ts",
   "dependencies": {
     "json-stable-stringify": "1.0.1",
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "rxjs": "5.4.3"
   },
   "devDependencies": {
     "@types/express": "4.0.37",
