RELATED: RAIL-308 Use typed gooddata-js

--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "devDependencies": {
     "@types/express": "4.0.37",
     "@types/invariant": "2.2.29",
-    "@types/jest": "18.1.1",
+    "@types/jest": "21.1.1",
     "@types/json-stable-stringify": "1.0.32",
     "@types/lodash": "4.14.61",
     "@types/node": "7.0.8",
-    "jest": "21.0.0",
+    "gooddata": "4.1.0",
+    "jest": "21.1.0",
     "jest-junit": "3.0.0",
     "ts-jest": "21.0.0",
     "tslint-config-gooddata": "0.0.4",
