--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "rxjs": "5.4.3"
   },
   "devDependencies": {
+    "@gooddata/typings": "0.0.4",
     "@types/express": "4.0.37",
     "@types/invariant": "2.2.29",
     "@types/jest": "21.1.1",
     "@types/json-stable-stringify": "1.0.32",
     "@types/lodash": "4.14.61",
     "@types/node": "7.0.8",
-    "gooddata": "4.3.1",
+    "gooddata": "4.4.0",
     "jest": "21.1.0",
     "jest-junit": "3.0.0",
     "ts-jest": "21.0.0",
-    "tslint-config-gooddata": "0.0.4",
+    "tslint-config-gooddata": "0.0.5",
     "typescript": "2.5.2"
   },
   "scripts": {
@@ -50,6 +51,7 @@
     "moduleFileExtensions": [
       "ts",
       "js"
-    ]
+    ],
+    "mapCoverage": true
   }
 }
