RELATED: ONE-2763 Adapt FE to new visualization object

--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "rxjs": "^5.5.6"
   },
   "devDependencies": {
-    "@gooddata/typings": "0.0.4",
+    "@gooddata/typings": "0.0.6-pbenes-visualization-object-2018-02-09T14-03-56-154Z",
     "@types/express": "4.0.37",
     "@types/invariant": "2.2.29",
     "@types/jest": "21.1.1",
     "@types/json-stable-stringify": "1.0.32",
     "@types/lodash": "4.14.61",
     "@types/node": "7.0.8",
-    "gooddata": "4.4.0",
+    "gooddata": "4.5.0-pbenes-visualization-object-2018-02-09T14-06-11-864Z",
     "jest": "21.1.0",
     "jest-junit": "3.0.0",
     "ts-jest": "21.0.0",
