--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   ],
   "typings": "dist/index.d.ts",
   "dependencies": {
-    "json-stable-stringify": "1.0.1",
-    "lodash": "4.17.4",
-    "rxjs": "5.4.3"
+    "json-stable-stringify": "^1.0.1",
+    "lodash": "^4.17.4",
+    "rxjs": "^5.5.6"
   },
   "devDependencies": {
     "@gooddata/typings": "0.0.4",
