RELATED: RAIL-657 Updated gooddata-js

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/json-stable-stringify": "1.0.32",
     "@types/lodash": "4.14.61",
     "@types/node": "7.0.8",
-    "gooddata": "4.5.0-pbenes-visualization-object-2018-02-09T14-06-11-864Z",
+    "gooddata": "4.5.0-vojty-factory2-2018-02-13T12-25-30-160Z",
     "jest": "21.1.0",
     "jest-junit": "3.0.0",
     "ts-jest": "21.0.0",
@@ -36,9 +36,9 @@
     "test": "jest --watch",
     "dev": "rm -rf dist && tsc --watch",
     "prepublish": "rm -rf dist && tsc",
-    "run-tslint": "./node_modules/tslint/bin/tslint -p tsconfig.base.json",
-    "tslint": "yarn run-tslint -- -t verbose '$npm_package_config_tslint'",
-    "tslint-ci": "mkdir -p ./ci/results && yarn run-tslint -- -t checkstyle -o ./ci/results/tslint-results.xml '$npm_package_config_tslint'",
+    "run-tslint": "tslint -p tsconfig.base.json",
+    "tslint": "yarn run-tslint -t verbose '$npm_package_config_tslint'",
+    "tslint-ci": "mkdir -p ./ci/results && yarn run-tslint -t checkstyle -o ./ci/results/tslint-results.xml '$npm_package_config_tslint'",
     "validate": "tsc -p tsconfig.base.json --noEmit && yarn tslint",
     "validate-ci": "tsc -p tsconfig.base.json --noEmit && yarn tslint-ci"
   },
